서버에서 요리 가능한 리스트 + 전체 요리 리스트 페이징 작업 완료

--- a/app/src/main/res/layout/list_item_material.xml
+++ b/app/src/main/res/layout/list_item_material.xml
@@ -24,7 +24,7 @@
             android:textColor="@color/color_000000"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:text="@{Long.toString(storageMaterialData.seq)}"
+            android:text="@{storageMaterialData.name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
