--- a/app/src/main/res/layout/list_item_cooking.xml
+++ b/app/src/main/res/layout/list_item_cooking.xml
@@ -19,6 +19,11 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -50,6 +55,7 @@
                     android:textColor="@color/color_Dark000000"
                     android:textSize="18sp"
                     tools:text="된장찌개"
+                    android:background="@android:color/transparent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
