--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,10 +22,11 @@
             android:id="@+id/autoTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:text="@={searchViewModel.search}"
+            android:backgroundTint="@color/color_000000"
             android:imeOptions="actionDone"
             android:singleLine="true"
             android:inputType="text"
