--- a/app/src/main/res/layout/list_item_cooking_recipe.xml
+++ b/app/src/main/res/layout/list_item_cooking_recipe.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="data"
+            type="com.taijoo.cookingassistance.data.model.CookingRecipeData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{data.comment}"
+            android:textSize="17sp"
+            android:textColor="@color/color_000000"
+            android:lineSpacingExtra="10dp"
+            android:letterSpacing="0.2"
+            tools:text="gsjnsgfjknfgsdjksd\nakmdsld"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
