재료 변경 페이지 Compose 도입 완료

--- a/app/src/main/res/layout/custom_date_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_date_dialog_layout.xml
@@ -4,6 +4,10 @@
 
     <data>
 
+        <variable
+            name="title_textview"
+            type="String" />
+
     </data>
 
     <LinearLayout
@@ -32,7 +36,7 @@
                     android:textSize="17sp"
                     android:textColor="@color/color_000000"
                     android:textStyle="bold"
-                    android:text="@string/date_dialog1"/>
+                    android:text="@{title_textview}" />
 
 
                 <DatePicker
