--- a/app/src/main/res/layout/activity_cooking_recipe.xml
+++ b/app/src/main/res/layout/activity_cooking_recipe.xml
@@ -44,7 +44,7 @@
                     android:layout_height="300dp"
                     android:background="@color/color_1B1B1B"
                     android:scaleType="centerCrop"
-                    android:transitionName="test"
+                    android:transitionName="cook"
                     android:forceDarkAllowed="true"
                     bindImage="@{viewmodel.img}"
                     app:layout_collapseMode="parallax"
