--- a/app/src/main/res/layout/fragment_storage_material.xml
+++ b/app/src/main/res/layout/fragment_storage_material.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -13,7 +14,8 @@
         <com.taijoo.cookingassistance.util.CustomRecyclerViewLayout
             android:id="@+id/storageList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
