--- a/app/src/main/res/layout/list_item_cooking.xml
+++ b/app/src/main/res/layout/list_item_cooking.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:transitionName="cook"
                 bindImage="@{data.img}"
                 android:alpha="0.5"
                 android:scaleType="centerCrop"/>
